--- a/mental-wellness-pwa/tsconfig.json
+++ b/mental-wellness-pwa/tsconfig.json
@@ -21,7 +21,8 @@
     "jsx": "react-jsx",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "ignoreDeprecations": "6.0"
   },
   "include": [
     "src"
