--- a/mental-wellness-pwa/vercel.json
+++ b/mental-wellness-pwa/vercel.json
@@ -2,37 +2,39 @@
   "version": 2,
   "name": "mindwell-pwa",
 
-  "routes": [
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ],
+  "headers": [
     {
-      "src": "/static/(.*)",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
+      "source": "/static/(.*)",
+      "headers": [
+        { "key": "cache-control", "value": "public, max-age=31536000, immutable" }
+      ]
     },
     {
-      "src": "/sw.js",
-      "headers": {
-        "cache-control": "public, max-age=0, must-revalidate",
-        "service-worker-allowed": "/"
-      }
+      "source": "/sw.js",
+      "headers": [
+        { "key": "cache-control", "value": "public, max-age=0, must-revalidate" },
+        { "key": "service-worker-allowed", "value": "/" }
+      ]
     },
     {
-      "src": "/manifest.json",
-      "headers": {
-        "content-type": "application/manifest+json",
-        "cache-control": "public, max-age=86400"
-      }
+      "source": "/manifest.json",
+      "headers": [
+        { "key": "content-type", "value": "application/manifest+json" },
+        { "key": "cache-control", "value": "public, max-age=86400" }
+      ]
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html",
-      "headers": {
-        "x-content-type-options": "nosniff",
-        "x-frame-options": "DENY",
-        "x-xss-protection": "1; mode=block",
-        "referrer-policy": "strict-origin-when-cross-origin",
-        "permissions-policy": "camera=(), microphone=(), geolocation=(), interest-cohort=()"
-      }
+      "source": "/(.*)",
+      "headers": [
+        { "key": "x-content-type-options", "value": "nosniff" },
+        { "key": "x-frame-options", "value": "DENY" },
+        { "key": "x-xss-protection", "value": "1; mode=block" },
+        { "key": "referrer-policy", "value": "strict-origin-when-cross-origin" },
+        { "key": "permissions-policy", "value": "camera=(), microphone=(), geolocation=(), interest-cohort=()" }
+      ]
     }
   ],
   "headers": [
